[package]
name = "rx_gtk"
description="rx utils for gtk-rs"
version = "0.1.0"
authors = ["应元东 <ying@yingDev.com>"]
license="MIT"
repository="https://github.com/yingDev/rxrs/rx_gtk"

[dependencies]
rxrs = {path = "../rx", version="0.1.0-alpha2"}
glib = "^0"
gdk="^0"
owning_ref = "0.3.3"

[dependencies.gtk]
version="^0"
features = ["v3_10"]